# onestep-worker-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-16-worker-agent-dependency-install-design.md
scripts/: run_smoke.py
src/onestep_worker_agent/: cli.py  client.py  config.py  identity.py  packages.py  state.py  supervisor.py
tests/: test_cli.py  test_client.py  test_client_messages.py  test_config.py  test_identity.py  test_packages.py  test_state.py  test_supervisor.py
